--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,23 @@
 language: php
+
 php:
 - 7.0
+- 7.2
+
+env:
+  global:
+  - WP_VERSION=master
+  - WP_VERSION=4.9.8
+
 script:
 - php -l *.php
-branches:
-  only:
-  - "/\\d\\.\\d\\.\\d/"
+
 deploy:
   provider: script
   script: deploy/deploy.sh
   on:
     tags: true
+
 env:
   global:
   - SVN_REPOSITORY=https://plugins.svn.wordpress.org/mcw-pwa/
